first auto-commit-man

--- a/000_2-sds-3-x-ml/print.html
+++ b/000_2-sds-3-x-ml/print.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>sds-3.x/ScaDaMaLe</title>
+        <title></title>
         <meta name="robots" content="noindex" />
 
 
@@ -31,10 +31,7 @@
         <link rel="stylesheet" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
-        <link rel="stylesheet" href="scroll-mdbook-outputs.css">
 
-        <!-- MathJax -->
-        <script async type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     </head>
     <body>
         <!-- Provide site root to javascript -->
@@ -85,7 +82,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/010a_packageCells.html">010a_packageCells</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/011_02_IntroToSimulation.html">011_02_IntroToSimulation</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/011_03_IntroToML.html">011_03_IntroToML</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/012_UnsupervisedClustering_1MSongsKMeans_Intro.html">012_UnsupervisedClustering_1MSongsKMeans_Intro</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/013_UnsupervisedClustering_1MSongsKMeans_Stage1ETL.html">013_UnsupervisedClustering_1MSongsKMeans_Stage1ETL</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/014_UnsupervisedClustering_1MSongsKMeans_Stage2Explore.html">014_UnsupervisedClustering_1MSongsKMeans_Stage2Explore</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/015_UnsupervisedClustering_1MSongsKMeans_Stage3Model.html">015_UnsupervisedClustering_1MSongsKMeans_Stage3Model</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/016_SupervisedClustering_DecisionTrees_HandWrittenDigitRecognition.html">016_SupervisedClustering_DecisionTrees_HandWrittenDigitRecognition</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/017_LAlgIntro.html">017_LAlgIntro</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/018_LinRegIntro.html">018_LinRegIntro</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/019_DistLAlgForLinRegIntro.html">019_DistLAlgForLinRegIntro</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/019x_000_dataTypesProgGuide.html">019x_000_dataTypesProgGuide</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/019x_001_LocalVector.html">019x_001_LocalVector</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/019x_002_LabeledPoint.html">019x_002_LabeledPoint</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/019x_003_LocalMatrix.html">019x_003_LocalMatrix</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/019x_004_DistributedMatrix.html">019x_004_DistributedMatrix</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/019x_005_RowMatrix.html">019x_005_RowMatrix</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/019x_006_IndexedRowMatrix.html">019x_006_IndexedRowMatrix</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/019x_007_CoordinateMatrix.html">019x_007_CoordinateMatrix</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/019x_008_BlockMatrix.html">019x_008_BlockMatrix</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/020_PowerPlantPipeline_02ModelTuneEvaluate.html">020_PowerPlantPipeline_02ModelTuneEvaluate</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/021_recognizeActivityByRandomForest.html">021_recognizeActivityByRandomForest</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/022_GraphFramesUserGuide.html">022_GraphFramesUserGuide</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/023_OnTimeFlightPerformance.html">023_OnTimeFlightPerformance</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/030_PowerPlantPipeline_03ModelTuneEvaluateDeploy.html">030_PowerPlantPipeline_03ModelTuneEvaluateDeploy</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/033_OBO_LoadExtract.html">033_OBO_LoadExtract</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/033_OBO_PipedRDD_RigorousBayesianABTesting.html">033_OBO_PipedRDD_RigorousBayesianABTesting</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/033_OBO_xx0_IvanSadikov_PipedRDDhelp.html">033_OBO_xx0_IvanSadikov_PipedRDDhelp</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/033_OBO_xx1_OBOnlineExample.html">033_OBO_xx1_OBOnlineExample</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/033_OBO_xx2_OBOnlineExampleScala.html">033_OBO_xx2_OBOnlineExampleScala</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/034_LDA_20NewsGroupsSmall.html">034_LDA_20NewsGroupsSmall</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/035_LDA_CornellMovieDialogs.html">035_LDA_CornellMovieDialogs</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/036_ALS_MovieRecommender.html">036_ALS_MovieRecommender</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/998_EX_01_GraphXShortestWeightedPaths.html">998_EX_01_GraphXShortestWeightedPaths</a></li><li class="chapter-item expanded affix "><a href="contents/000_2-sds-3-x-ml/999_YT_01_FinancialFraudDetectionUsingDecisionTreeMachineLearningModels.html">999_YT_01_FinancialFraudDetectionUsingDecisionTreeMachineLearningModels</a></li></ol>
+                <ol class="chapter"></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -114,7 +111,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">sds-3.x/ScaDaMaLe</h1>
+                    <h1 class="menu-title"></h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
@@ -146,42 +143,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="010a_packagecells"><a class="header" href="#010a_packagecells">010a_packageCells</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="011_02_introtosimulation"><a class="header" href="#011_02_introtosimulation">011_02_IntroToSimulation</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="011_03_introtoml"><a class="header" href="#011_03_introtoml">011_03_IntroToML</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="012_unsupervisedclustering_1msongskmeans_intro"><a class="header" href="#012_unsupervisedclustering_1msongskmeans_intro">012_UnsupervisedClustering_1MSongsKMeans_Intro</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="013_unsupervisedclustering_1msongskmeans_stage1etl"><a class="header" href="#013_unsupervisedclustering_1msongskmeans_stage1etl">013_UnsupervisedClustering_1MSongsKMeans_Stage1ETL</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="014_unsupervisedclustering_1msongskmeans_stage2explore"><a class="header" href="#014_unsupervisedclustering_1msongskmeans_stage2explore">014_UnsupervisedClustering_1MSongsKMeans_Stage2Explore</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="015_unsupervisedclustering_1msongskmeans_stage3model"><a class="header" href="#015_unsupervisedclustering_1msongskmeans_stage3model">015_UnsupervisedClustering_1MSongsKMeans_Stage3Model</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="016_supervisedclustering_decisiontrees_handwrittendigitrecognition"><a class="header" href="#016_supervisedclustering_decisiontrees_handwrittendigitrecognition">016_SupervisedClustering_DecisionTrees_HandWrittenDigitRecognition</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="017_lalgintro"><a class="header" href="#017_lalgintro">017_LAlgIntro</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="018_linregintro"><a class="header" href="#018_linregintro">018_LinRegIntro</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="019_distlalgforlinregintro"><a class="header" href="#019_distlalgforlinregintro">019_DistLAlgForLinRegIntro</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="019x_000_datatypesprogguide"><a class="header" href="#019x_000_datatypesprogguide">019x_000_dataTypesProgGuide</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="019x_001_localvector"><a class="header" href="#019x_001_localvector">019x_001_LocalVector</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="019x_002_labeledpoint"><a class="header" href="#019x_002_labeledpoint">019x_002_LabeledPoint</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="019x_003_localmatrix"><a class="header" href="#019x_003_localmatrix">019x_003_LocalMatrix</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="019x_004_distributedmatrix"><a class="header" href="#019x_004_distributedmatrix">019x_004_DistributedMatrix</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="019x_005_rowmatrix"><a class="header" href="#019x_005_rowmatrix">019x_005_RowMatrix</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="019x_006_indexedrowmatrix"><a class="header" href="#019x_006_indexedrowmatrix">019x_006_IndexedRowMatrix</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="019x_007_coordinatematrix"><a class="header" href="#019x_007_coordinatematrix">019x_007_CoordinateMatrix</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="019x_008_blockmatrix"><a class="header" href="#019x_008_blockmatrix">019x_008_BlockMatrix</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="020_powerplantpipeline_02modeltuneevaluate"><a class="header" href="#020_powerplantpipeline_02modeltuneevaluate">020_PowerPlantPipeline_02ModelTuneEvaluate</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="021_recognizeactivitybyrandomforest"><a class="header" href="#021_recognizeactivitybyrandomforest">021_recognizeActivityByRandomForest</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="022_graphframesuserguide"><a class="header" href="#022_graphframesuserguide">022_GraphFramesUserGuide</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="023_ontimeflightperformance"><a class="header" href="#023_ontimeflightperformance">023_OnTimeFlightPerformance</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="030_powerplantpipeline_03modeltuneevaluatedeploy"><a class="header" href="#030_powerplantpipeline_03modeltuneevaluatedeploy">030_PowerPlantPipeline_03ModelTuneEvaluateDeploy</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="033_obo_loadextract"><a class="header" href="#033_obo_loadextract">033_OBO_LoadExtract</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="033_obo_pipedrdd_rigorousbayesianabtesting"><a class="header" href="#033_obo_pipedrdd_rigorousbayesianabtesting">033_OBO_PipedRDD_RigorousBayesianABTesting</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="033_obo_xx0_ivansadikov_pipedrddhelp"><a class="header" href="#033_obo_xx0_ivansadikov_pipedrddhelp">033_OBO_xx0_IvanSadikov_PipedRDDhelp</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="033_obo_xx1_obonlineexample"><a class="header" href="#033_obo_xx1_obonlineexample">033_OBO_xx1_OBOnlineExample</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="033_obo_xx2_obonlineexamplescala"><a class="header" href="#033_obo_xx2_obonlineexamplescala">033_OBO_xx2_OBOnlineExampleScala</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="034_lda_20newsgroupssmall"><a class="header" href="#034_lda_20newsgroupssmall">034_LDA_20NewsGroupsSmall</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="035_lda_cornellmoviedialogs"><a class="header" href="#035_lda_cornellmoviedialogs">035_LDA_CornellMovieDialogs</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="036_als_movierecommender"><a class="header" href="#036_als_movierecommender">036_ALS_MovieRecommender</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="998_ex_01_graphxshortestweightedpaths"><a class="header" href="#998_ex_01_graphxshortestweightedpaths">998_EX_01_GraphXShortestWeightedPaths</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="999_yt_01_financialfrauddetectionusingdecisiontreemachinelearningmodels"><a class="header" href="#999_yt_01_financialfrauddetectionusingdecisiontreemachinelearningmodels">999_YT_01_FinancialFraudDetectionUsingDecisionTreeMachineLearningModels</a></h1>
-
+                        
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
@@ -219,9 +181,7 @@
 
         <script type="text/javascript">
         window.addEventListener('load', function() {
-            MathJax.Hub.Register.StartupHook('End', function() {
-                window.setTimeout(window.print, 100);
-            });
+            window.setTimeout(window.print, 100);
         });
         </script>
 
