--- a/000_6-sds-3-x-dl/print.html
+++ b/000_6-sds-3-x-dl/print.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>sds-3.x/ScaDaMaLe</title>
+        <title></title>
         <meta name="robots" content="noindex" />
 
 
@@ -31,10 +31,7 @@
         <link rel="stylesheet" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
-        <link rel="stylesheet" href="scroll-mdbook-outputs.css">
 
-        <!-- MathJax -->
-        <script async type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     </head>
     <body>
         <!-- Provide site root to javascript -->
@@ -85,7 +82,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="contents/000_6-sds-3-x-dl/000_6-sds-3-x-dl.html">000_6-sds-3-x-dl</a></li><li class="chapter-item expanded affix "><a href="contents/000_6-sds-3-x-dl/049_DeepLearningIntro.html">049_DeepLearningIntro</a></li><li class="chapter-item expanded affix "><a href="contents/000_6-sds-3-x-dl/050_DLbyABr_01-Intro.html">050_DLbyABr_01-Intro</a></li><li class="chapter-item expanded affix "><a href="contents/000_6-sds-3-x-dl/051_DLbyABr_02-Neural-Networks.html">051_DLbyABr_02-Neural-Networks</a></li><li class="chapter-item expanded affix "><a href="contents/000_6-sds-3-x-dl/052_DLbyABr_02a-Keras-DFFN.html">052_DLbyABr_02a-Keras-DFFN</a></li><li class="chapter-item expanded affix "><a href="contents/000_6-sds-3-x-dl/053_DLbyABr_03-HelloTensorFlow.html">053_DLbyABr_03-HelloTensorFlow</a></li><li class="chapter-item expanded affix "><a href="contents/000_6-sds-3-x-dl/054_DLbyABr_03a-BatchTensorFlowWithMatrices.html">054_DLbyABr_03a-BatchTensorFlowWithMatrices</a></li><li class="chapter-item expanded affix "><a href="contents/000_6-sds-3-x-dl/055_DLbyABr_04-ConvolutionalNetworks.html">055_DLbyABr_04-ConvolutionalNetworks</a></li><li class="chapter-item expanded affix "><a href="contents/000_6-sds-3-x-dl/056_DLbyABr_04a-Hands-On-MNIST-MLP.html">056_DLbyABr_04a-Hands-On-MNIST-MLP</a></li><li class="chapter-item expanded affix "><a href="contents/000_6-sds-3-x-dl/057_DLbyABr_04b-Hands-On-MNIST-CNN.html">057_DLbyABr_04b-Hands-On-MNIST-CNN</a></li><li class="chapter-item expanded affix "><a href="contents/000_6-sds-3-x-dl/058_DLbyABr_04c-CIFAR-10.html">058_DLbyABr_04c-CIFAR-10</a></li><li class="chapter-item expanded affix "><a href="contents/000_6-sds-3-x-dl/059_DLbyABr_05-RecurrentNetworks.html">059_DLbyABr_05-RecurrentNetworks</a></li><li class="chapter-item expanded affix "><a href="contents/000_6-sds-3-x-dl/060_DLByABr_05a-LSTM-Solution.html">060_DLByABr_05a-LSTM-Solution</a></li><li class="chapter-item expanded affix "><a href="contents/000_6-sds-3-x-dl/061_DLByABr_05b-LSTM-Language.html">061_DLByABr_05b-LSTM-Language</a></li><li class="chapter-item expanded affix "><a href="contents/000_6-sds-3-x-dl/062_DLbyABr_06-GenerativeNetworks.html">062_DLbyABr_06-GenerativeNetworks</a></li><li class="chapter-item expanded affix "><a href="contents/000_6-sds-3-x-dl/063_DLbyABr_07-ReinforcementLearning.html">063_DLbyABr_07-ReinforcementLearning</a></li><li class="chapter-item expanded affix "><a href="contents/000_6-sds-3-x-dl/064_DLbyABr_08-Operations.html">064_DLbyABr_08-Operations</a></li><li class="chapter-item expanded affix "><a href="contents/000_6-sds-3-x-dl/064x_MLOps_with_Pytorch_and_MLflow_for_Image_Classification.html">064x_MLOps_with_Pytorch_and_MLflow_for_Image_Classification</a></li></ol>
+                <ol class="chapter"></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -114,7 +111,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">sds-3.x/ScaDaMaLe</h1>
+                    <h1 class="menu-title"></h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
@@ -146,25 +143,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="000_6-sds-3-x-dl"><a class="header" href="#000_6-sds-3-x-dl">000_6-sds-3-x-dl</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="049_deeplearningintro"><a class="header" href="#049_deeplearningintro">049_DeepLearningIntro</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="050_dlbyabr_01-intro"><a class="header" href="#050_dlbyabr_01-intro">050_DLbyABr_01-Intro</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="051_dlbyabr_02-neural-networks"><a class="header" href="#051_dlbyabr_02-neural-networks">051_DLbyABr_02-Neural-Networks</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="052_dlbyabr_02a-keras-dffn"><a class="header" href="#052_dlbyabr_02a-keras-dffn">052_DLbyABr_02a-Keras-DFFN</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="053_dlbyabr_03-hellotensorflow"><a class="header" href="#053_dlbyabr_03-hellotensorflow">053_DLbyABr_03-HelloTensorFlow</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="054_dlbyabr_03a-batchtensorflowwithmatrices"><a class="header" href="#054_dlbyabr_03a-batchtensorflowwithmatrices">054_DLbyABr_03a-BatchTensorFlowWithMatrices</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="055_dlbyabr_04-convolutionalnetworks"><a class="header" href="#055_dlbyabr_04-convolutionalnetworks">055_DLbyABr_04-ConvolutionalNetworks</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="056_dlbyabr_04a-hands-on-mnist-mlp"><a class="header" href="#056_dlbyabr_04a-hands-on-mnist-mlp">056_DLbyABr_04a-Hands-On-MNIST-MLP</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="057_dlbyabr_04b-hands-on-mnist-cnn"><a class="header" href="#057_dlbyabr_04b-hands-on-mnist-cnn">057_DLbyABr_04b-Hands-On-MNIST-CNN</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="058_dlbyabr_04c-cifar-10"><a class="header" href="#058_dlbyabr_04c-cifar-10">058_DLbyABr_04c-CIFAR-10</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="059_dlbyabr_05-recurrentnetworks"><a class="header" href="#059_dlbyabr_05-recurrentnetworks">059_DLbyABr_05-RecurrentNetworks</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="060_dlbyabr_05a-lstm-solution"><a class="header" href="#060_dlbyabr_05a-lstm-solution">060_DLByABr_05a-LSTM-Solution</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="061_dlbyabr_05b-lstm-language"><a class="header" href="#061_dlbyabr_05b-lstm-language">061_DLByABr_05b-LSTM-Language</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="062_dlbyabr_06-generativenetworks"><a class="header" href="#062_dlbyabr_06-generativenetworks">062_DLbyABr_06-GenerativeNetworks</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="063_dlbyabr_07-reinforcementlearning"><a class="header" href="#063_dlbyabr_07-reinforcementlearning">063_DLbyABr_07-ReinforcementLearning</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="064_dlbyabr_08-operations"><a class="header" href="#064_dlbyabr_08-operations">064_DLbyABr_08-Operations</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="064x_mlops_with_pytorch_and_mlflow_for_image_classification"><a class="header" href="#064x_mlops_with_pytorch_and_mlflow_for_image_classification">064x_MLOps_with_Pytorch_and_MLflow_for_Image_Classification</a></h1>
-
+                        
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
@@ -202,9 +181,7 @@
 
         <script type="text/javascript">
         window.addEventListener('load', function() {
-            MathJax.Hub.Register.StartupHook('End', function() {
-                window.setTimeout(window.print, 100);
-            });
+            window.setTimeout(window.print, 100);
         });
         </script>
 
