--- a/000_7-sds-3-x-ddl/print.html
+++ b/000_7-sds-3-x-ddl/print.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>sds-3.x/ScaDaMaLe</title>
+        <title></title>
         <meta name="robots" content="noindex" />
 
 
@@ -31,10 +31,7 @@
         <link rel="stylesheet" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
-        <link rel="stylesheet" href="scroll-mdbook-outputs.css">
 
-        <!-- MathJax -->
-        <script async type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     </head>
     <body>
         <!-- Provide site root to javascript -->
@@ -85,7 +82,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="contents/000_7-sds-3-x-ddl/00_DDL_Introduction.html">00_DDL_Introduction</a></li><li class="chapter-item expanded affix "><a href="contents/000_7-sds-3-x-ddl/0x_mnist-tensorflow-keras.html">0x_mnist-tensorflow-keras</a></li><li class="chapter-item expanded affix "><a href="contents/000_7-sds-3-x-ddl/0y_mnist-pytorch.html">0y_mnist-pytorch</a></li><li class="chapter-item expanded affix "><a href="contents/000_7-sds-3-x-ddl/exjobbsOfCombientMix2021_00_introduction.html">exjobbsOfCombientMix2021_00_introduction</a></li><li class="chapter-item expanded affix "><a href="contents/000_7-sds-3-x-ddl/exjobbsOfCombientMix2021_01a_image_segmentation_unet.html">exjobbsOfCombientMix2021_01a_image_segmentation_unet</a></li><li class="chapter-item expanded affix "><a href="contents/000_7-sds-3-x-ddl/exjobbsOfCombientMix2021_02a_image_segmenation_pspnet.html">exjobbsOfCombientMix2021_02a_image_segmenation_pspnet</a></li><li class="chapter-item expanded affix "><a href="contents/000_7-sds-3-x-ddl/exjobbsOfCombientMix2021_03a_image_segmentation_icnet.html">exjobbsOfCombientMix2021_03a_image_segmentation_icnet</a></li><li class="chapter-item expanded affix "><a href="contents/000_7-sds-3-x-ddl/exjobbsOfCombientMix2021_04_pspnet_tuning_parallel.html">exjobbsOfCombientMix2021_04_pspnet_tuning_parallel</a></li><li class="chapter-item expanded affix "><a href="contents/000_7-sds-3-x-ddl/exjobbsOfCombientMix2021_05_pspnet_horovod.html">exjobbsOfCombientMix2021_05_pspnet_horovod</a></li></ol>
+                <ol class="chapter"></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -114,7 +111,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">sds-3.x/ScaDaMaLe</h1>
+                    <h1 class="menu-title"></h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
@@ -146,16 +143,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="00_ddl_introduction"><a class="header" href="#00_ddl_introduction">00_DDL_Introduction</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="0x_mnist-tensorflow-keras"><a class="header" href="#0x_mnist-tensorflow-keras">0x_mnist-tensorflow-keras</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="0y_mnist-pytorch"><a class="header" href="#0y_mnist-pytorch">0y_mnist-pytorch</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="exjobbsofcombientmix2021_00_introduction"><a class="header" href="#exjobbsofcombientmix2021_00_introduction">exjobbsOfCombientMix2021_00_introduction</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="exjobbsofcombientmix2021_01a_image_segmentation_unet"><a class="header" href="#exjobbsofcombientmix2021_01a_image_segmentation_unet">exjobbsOfCombientMix2021_01a_image_segmentation_unet</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="exjobbsofcombientmix2021_02a_image_segmenation_pspnet"><a class="header" href="#exjobbsofcombientmix2021_02a_image_segmenation_pspnet">exjobbsOfCombientMix2021_02a_image_segmenation_pspnet</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="exjobbsofcombientmix2021_03a_image_segmentation_icnet"><a class="header" href="#exjobbsofcombientmix2021_03a_image_segmentation_icnet">exjobbsOfCombientMix2021_03a_image_segmentation_icnet</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="exjobbsofcombientmix2021_04_pspnet_tuning_parallel"><a class="header" href="#exjobbsofcombientmix2021_04_pspnet_tuning_parallel">exjobbsOfCombientMix2021_04_pspnet_tuning_parallel</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="exjobbsofcombientmix2021_05_pspnet_horovod"><a class="header" href="#exjobbsofcombientmix2021_05_pspnet_horovod">exjobbsOfCombientMix2021_05_pspnet_horovod</a></h1>
-
+                        
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
@@ -193,9 +181,7 @@
 
         <script type="text/javascript">
         window.addEventListener('load', function() {
-            MathJax.Hub.Register.StartupHook('End', function() {
-                window.setTimeout(window.print, 100);
-            });
+            window.setTimeout(window.print, 100);
         });
         </script>
 
