--- a/000_1-sds-3-x-sql/404.html
+++ b/000_1-sds-3-x-sql/404.html
@@ -31,10 +31,7 @@
         <link rel="stylesheet" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
-        <link rel="stylesheet" href="scroll-mdbook-outputs.css">
 
-        <!-- MathJax -->
-        <script async type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     </head>
     <body>
         <!-- Provide site root to javascript -->
@@ -114,7 +111,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">sds-3.x/ScaDaMaLe</h1>
+                    <h1 class="menu-title"></h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
