--- a/000_3-sds-3-x-st/print.html
+++ b/000_3-sds-3-x-st/print.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>sds-3.x/ScaDaMaLe</title>
+        <title></title>
         <meta name="robots" content="noindex" />
 
 
@@ -31,10 +31,7 @@
         <link rel="stylesheet" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
-        <link rel="stylesheet" href="scroll-mdbook-outputs.css">
 
-        <!-- MathJax -->
-        <script async type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     </head>
     <body>
         <!-- Provide site root to javascript -->
@@ -85,7 +82,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="contents/000_3-sds-3-x-st/024_SparkStreamingIntro.html">024_SparkStreamingIntro</a></li><li class="chapter-item expanded affix "><a href="contents/000_3-sds-3-x-st/025_0_getTwitterDeveloperCredentials.html">025_0_getTwitterDeveloperCredentials</a></li><li class="chapter-item expanded affix "><a href="contents/000_3-sds-3-x-st/025_a_extendedTwitterUtils2run.html">025_a_extendedTwitterUtils2run</a></li><li class="chapter-item expanded affix "><a href="contents/000_3-sds-3-x-st/025_b_TTTDFfunctions.html">025_b_TTTDFfunctions</a></li><li class="chapter-item expanded affix "><a href="contents/000_3-sds-3-x-st/025_c_extendedTwitterUtils2runWithLangs.html">025_c_extendedTwitterUtils2runWithLangs</a></li><li class="chapter-item expanded affix "><a href="contents/000_3-sds-3-x-st/026_TweetCollector.html">026_TweetCollector</a></li><li class="chapter-item expanded affix "><a href="contents/000_3-sds-3-x-st/027_TweetCollectorTrackAndFollow.html">027_TweetCollectorTrackAndFollow</a></li><li class="chapter-item expanded affix "><a href="contents/000_3-sds-3-x-st/028_TweetHashtagCount.html">028_TweetHashtagCount</a></li><li class="chapter-item expanded affix "><a href="contents/000_3-sds-3-x-st/029_TweetLanguageClassifier.html">029_TweetLanguageClassifier</a></li><li class="chapter-item expanded affix "><a href="contents/000_3-sds-3-x-st/029_Viz_0_TwitterInteractiveVizualisations.html">029_Viz_0_TwitterInteractiveVizualisations</a></li><li class="chapter-item expanded affix "><a href="contents/000_3-sds-3-x-st/029_Viz_1_GraphNetworkTimeline.html">029_Viz_1_GraphNetworkTimeline</a></li><li class="chapter-item expanded affix "><a href="contents/000_3-sds-3-x-st/029_Viz_2_CoSENSE_EmotionalDimensions.html">029_Viz_2_CoSENSE_EmotionalDimensions</a></li><li class="chapter-item expanded affix "><a href="contents/000_3-sds-3-x-st/029_Viz_x_VizGraphFunction.html">029_Viz_x_VizGraphFunction</a></li><li class="chapter-item expanded affix "><a href="contents/000_3-sds-3-x-st/029_Viz_x_VizNetworkFunction.html">029_Viz_x_VizNetworkFunction</a></li><li class="chapter-item expanded affix "><a href="contents/000_3-sds-3-x-st/029_Viz_x_VizTimelineFunction.html">029_Viz_x_VizTimelineFunction</a></li></ol>
+                <ol class="chapter"></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -114,7 +111,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">sds-3.x/ScaDaMaLe</h1>
+                    <h1 class="menu-title"></h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
@@ -146,22 +143,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="024_sparkstreamingintro"><a class="header" href="#024_sparkstreamingintro">024_SparkStreamingIntro</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="025_0_gettwitterdevelopercredentials"><a class="header" href="#025_0_gettwitterdevelopercredentials">025_0_getTwitterDeveloperCredentials</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="025_a_extendedtwitterutils2run"><a class="header" href="#025_a_extendedtwitterutils2run">025_a_extendedTwitterUtils2run</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="025_b_tttdffunctions"><a class="header" href="#025_b_tttdffunctions">025_b_TTTDFfunctions</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="025_c_extendedtwitterutils2runwithlangs"><a class="header" href="#025_c_extendedtwitterutils2runwithlangs">025_c_extendedTwitterUtils2runWithLangs</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="026_tweetcollector"><a class="header" href="#026_tweetcollector">026_TweetCollector</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="027_tweetcollectortrackandfollow"><a class="header" href="#027_tweetcollectortrackandfollow">027_TweetCollectorTrackAndFollow</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="028_tweethashtagcount"><a class="header" href="#028_tweethashtagcount">028_TweetHashtagCount</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="029_tweetlanguageclassifier"><a class="header" href="#029_tweetlanguageclassifier">029_TweetLanguageClassifier</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="029_viz_0_twitterinteractivevizualisations"><a class="header" href="#029_viz_0_twitterinteractivevizualisations">029_Viz_0_TwitterInteractiveVizualisations</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="029_viz_1_graphnetworktimeline"><a class="header" href="#029_viz_1_graphnetworktimeline">029_Viz_1_GraphNetworkTimeline</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="029_viz_2_cosense_emotionaldimensions"><a class="header" href="#029_viz_2_cosense_emotionaldimensions">029_Viz_2_CoSENSE_EmotionalDimensions</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="029_viz_x_vizgraphfunction"><a class="header" href="#029_viz_x_vizgraphfunction">029_Viz_x_VizGraphFunction</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="029_viz_x_viznetworkfunction"><a class="header" href="#029_viz_x_viznetworkfunction">029_Viz_x_VizNetworkFunction</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="029_viz_x_viztimelinefunction"><a class="header" href="#029_viz_x_viztimelinefunction">029_Viz_x_VizTimelineFunction</a></h1>
-
+                        
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
@@ -199,9 +181,7 @@
 
         <script type="text/javascript">
         window.addEventListener('load', function() {
-            MathJax.Hub.Register.StartupHook('End', function() {
-                window.setTimeout(window.print, 100);
-            });
+            window.setTimeout(window.print, 100);
         });
         </script>
 
