first auto-commit-man

--- a/000_3-sds-3-x-st/contents/000_3-sds-3-x-st/025_0_getTwitterDeveloperCredentials.html
+++ b/000_3-sds-3-x-st/contents/000_3-sds-3-x-st/025_0_getTwitterDeveloperCredentials.html
@@ -145,7 +145,19 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="025_0_gettwitterdevelopercredentials"><a class="header" href="#025_0_gettwitterdevelopercredentials">025_0_getTwitterDeveloperCredentials</a></h1>
+                        <div class="cell markdown">
+<p>ScaDaMaLe Course <a href="https://lamastex.github.io/scalable-data-science/sds/3/x/">site</a> and <a href="https://lamastex.github.io/ScaDaMaLe/index.html">book</a></p>
+</div>
+<div class="cell markdown">
+<p>Dear Researcher,</p>
+<p>The main form of assessment for day 01 of module 01 and both days of module 03 is most likely going to be a fairly open-ended project in groups of appropriate sizes (with some structure TBD) that is close to your research interests. The exact details will be given at the end of day 02 of module 03. There will most likely be dedicated Office Hours after module 03 to support you with the project (admin, infrastructure, etc).</p>
+<p>Towards this, as one possibility for project, I strongly encourage you to apply for Twitter Developer Account (you need a Twitter user account first). This process can take couple of weeks. With Twitter developer account you can do your own experiments in Twitter and it would be an interesting application of streaming.</p>
+<p>The instructions are roughly as follows (Twitter will ask different questions to different users... rules keep evolving... just make it clear you are just wanting credentials for learning Spark streaming. Keep it simple.): https://lamastex.github.io/scalable-data-science/sds/basics/instructions/getTwitterDevCreds/ (Links to an external site.)</p>
+<p>You can still follow the lab/lectures without your own Twitter Developer credentials IF I/we dynamically decide to go through Twitter examples of Streaming (provided at least one of you has applied for the developer credentials and is interested in such experiments), but then you will not be able to do your own experiments live in Twitter as I will be doing mine.</p>
+<p>Twitter can be a fun source of interesting projects from uniformly sampled social media interactions in the world (but there are many other projects, especially those coming from your own research questions).</p>
+<p>Cheers!</p>
+<p>Raaz</p>
+</div>
 
                     </main>
 
