--- a/000_4-sds-3-x-ss/404.html
+++ b/000_4-sds-3-x-ss/404.html
@@ -31,7 +31,10 @@
         <link rel="stylesheet" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="scroll-mdbook-outputs.css">
 
+        <!-- MathJax -->
+        <script async type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     </head>
     <body>
         <!-- Provide site root to javascript -->
@@ -82,7 +85,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="contents/000_4-sds-3-x-ss/037a_AnimalNamesStructStreamingFiles.html">037a_AnimalNamesStructStreamingFiles</a></li><li class="chapter-item expanded affix "><a href="contents/000_4-sds-3-x-ss/037b_Mix2NormalsStructStreamingFiles.html">037b_Mix2NormalsStructStreamingFiles</a></li><li class="chapter-item expanded affix "><a href="contents/000_4-sds-3-x-ss/037c_Mix2RandomGraphStructStreamingFiles.html">037c_Mix2RandomGraphStructStreamingFiles</a></li><li class="chapter-item expanded affix "><a href="contents/000_4-sds-3-x-ss/038_StructuredStreamingProgGuide.html">038_StructuredStreamingProgGuide</a></li><li class="chapter-item expanded affix "><a href="contents/000_4-sds-3-x-ss/039_StructuredStreamingFromJSONFileStream.html">039_StructuredStreamingFromJSONFileStream</a></li><li class="chapter-item expanded affix "><a href="contents/000_4-sds-3-x-ss/040_Sketching.html">040_Sketching</a></li><li class="chapter-item expanded affix "><a href="contents/000_4-sds-3-x-ss/040a_TDigestInputStream.html">040a_TDigestInputStream</a></li><li class="chapter-item expanded affix "><a href="contents/000_4-sds-3-x-ss/041_SketchingWithTDigest.html">041_SketchingWithTDigest</a></li><li class="chapter-item expanded affix "><a href="contents/000_4-sds-3-x-ss/042_streamingWithTDigest.html">042_streamingWithTDigest</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -111,7 +114,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title"></h1>
+                    <h1 class="menu-title">sds-3.x/ScaDaMaLe</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
