--- a/000_3-sds-3-x-st/contents/000_3-sds-3-x-st/025_a_extendedTwitterUtils2run.html
+++ b/000_3-sds-3-x-st/contents/000_3-sds-3-x-st/025_a_extendedTwitterUtils2run.html
@@ -145,7 +145,190 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="025_a_extendedtwitterutils2run"><a class="header" href="#025_a_extendedtwitterutils2run">025_a_extendedTwitterUtils2run</a></h1>
+                        <div class="cell markdown">
+<p>ScaDaMaLe Course <a href="https://lamastex.github.io/scalable-data-science/sds/3/x/">site</a> and <a href="https://lamastex.github.io/ScaDaMaLe/index.html">book</a></p>
+</div>
+<div class="cell markdown">
+<h1 id="twitter-utility-functions"><a class="header" href="#twitter-utility-functions">Twitter Utility Functions</a></h1>
+<p>Here we develop a few notebooks starting with <code>025_*</code> to help us with Twitter experiments.</p>
+<h2 id="extended-twitterutils"><a class="header" href="#extended-twitterutils">Extended TwitterUtils</a></h2>
+<p>We extend twitter utils from Spark to allow for filtering by user-ids using <code>.follow</code> and strings in the tweet using <code>.track</code> method of <code>twitter4j</code>.</p>
+<p>This is part of <em>Project MEP: Meme Evolution Programme</em> and supported by databricks, AWS and a Swedish VR grant.</p>
+<p>The analysis is available in the following databricks notebook: * <a href="http://lamastex.org/lmse/mep/src/extendedTwitterUtil.html">http://lamastex.org/lmse/mep/src/extendedTwitterUtils.html</a></p>
+<pre><code>Copyright 2016-2020 Ivan Sadikov and Raazesh Sainudiin
+
+Licensed under the Apache License, Version 2.0 (the &quot;License&quot;);
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an &quot;AS IS&quot; BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+</code></pre>
+</div>
+<div class="cell code" execution_count="1" scrolled="false">
+<pre><code class="language-scala">import twitter4j._
+import twitter4j.auth.Authorization
+import twitter4j.conf.ConfigurationBuilder
+import twitter4j.auth.OAuthAuthorization
+
+import org.apache.spark.streaming._
+import org.apache.spark.streaming.dstream._
+import org.apache.spark.storage.StorageLevel
+import org.apache.spark.streaming.receiver.Receiver
+</code></pre>
+<div class="output execute_result plain_result" execution_count="1">
+<pre><code>import twitter4j._
+import twitter4j.auth.Authorization
+import twitter4j.conf.ConfigurationBuilder
+import twitter4j.auth.OAuthAuthorization
+import org.apache.spark.streaming._
+import org.apache.spark.streaming.dstream._
+import org.apache.spark.storage.StorageLevel
+import org.apache.spark.streaming.receiver.Receiver
+</code></pre>
+</div>
+</div>
+<div class="cell markdown">
+<h3 id="twitter-receiver-and-stream"><a class="header" href="#twitter-receiver-and-stream">Twitter receiver and stream</a></h3>
+</div>
+<div class="cell code" execution_count="1" scrolled="false">
+<pre><code class="language-scala">class ExtendedTwitterReceiver(
+    twitterAuth: Authorization,
+    filters: Seq[String],
+    userFilters: Seq[Long],
+    storageLevel: StorageLevel
+  ) extends Receiver[Status](storageLevel) {
+
+  @volatile private var twitterStream: TwitterStream = _
+  @volatile private var stopped = false
+
+  def onStart() {
+    try {
+      val newTwitterStream = new TwitterStreamFactory().getInstance(twitterAuth)
+      newTwitterStream.addListener(new StatusListener {
+        def onStatus(status: Status): Unit = {
+          store(status)
+        }
+        // Unimplemented
+        def onDeletionNotice(statusDeletionNotice: StatusDeletionNotice) {}
+        def onTrackLimitationNotice(i: Int) {}
+        def onScrubGeo(l: Long, l1: Long) {}
+        def onStallWarning(stallWarning: StallWarning) {}
+        def onException(e: Exception) {
+          if (!stopped) {
+            restart(&quot;Error receiving tweets&quot;, e)
+          }
+        }
+      })
+
+      // do filtering only when filters are available
+      if (filters.nonEmpty || userFilters.nonEmpty) {
+        val query = new FilterQuery()
+        if (filters.nonEmpty) {
+          query.track(filters.mkString(&quot;,&quot;))
+        }
+
+        if (userFilters.nonEmpty) {
+          query.follow(userFilters: _*)
+        }
+        
+        newTwitterStream.filter(query)
+      } else {
+        newTwitterStream.sample()
+      }
+      setTwitterStream(newTwitterStream)
+      println(&quot;Twitter receiver started&quot;)
+      stopped = false
+    } catch {
+      case e: Exception =&gt; restart(&quot;Error starting Twitter stream&quot;, e)
+    }
+  }
+
+  def onStop() {
+    stopped = true
+    setTwitterStream(null)
+    println(&quot;Twitter receiver stopped&quot;)
+  }
+
+  private def setTwitterStream(newTwitterStream: TwitterStream) = synchronized {
+    if (twitterStream != null) {
+      twitterStream.shutdown()
+    }
+    twitterStream = newTwitterStream
+  }
+}
+</code></pre>
+<div class="output execute_result plain_result" execution_count="1">
+<pre><code>defined class ExtendedTwitterReceiver
+</code></pre>
+</div>
+</div>
+<div class="cell code" execution_count="1" scrolled="false">
+<pre><code class="language-scala">class ExtendedTwitterInputDStream(
+    ssc_ : StreamingContext,
+    twitterAuth: Option[Authorization],
+    filters: Seq[String],
+    userFilters: Seq[Long],
+    storageLevel: StorageLevel
+  ) extends ReceiverInputDStream[Status](ssc_)  {
+
+  private def createOAuthAuthorization(): Authorization = {
+    new OAuthAuthorization(new ConfigurationBuilder().build())
+  }
+
+  private val authorization = twitterAuth.getOrElse(createOAuthAuthorization())
+
+  override def getReceiver(): Receiver[Status] = {
+    new ExtendedTwitterReceiver(authorization, filters, userFilters, storageLevel)
+  }
+}
+</code></pre>
+<div class="output execute_result plain_result" execution_count="1">
+<pre><code>defined class ExtendedTwitterInputDStream
+</code></pre>
+</div>
+</div>
+<div class="cell markdown">
+<h3 id="extended-twitter-utils"><a class="header" href="#extended-twitter-utils">Extended twitter utils</a></h3>
+</div>
+<div class="cell code" execution_count="1" scrolled="false">
+<pre><code class="language-scala">import twitter4j.Status
+import twitter4j.auth.Authorization
+import org.apache.spark.storage.StorageLevel
+import org.apache.spark.streaming.StreamingContext
+import org.apache.spark.streaming.dstream.{ReceiverInputDStream, DStream}
+
+object ExtendedTwitterUtils {
+  def createStream(
+      ssc: StreamingContext,
+      twitterAuth: Option[Authorization],
+      filters: Seq[String] = Nil,
+      userFilters: Seq[Long] = Nil,
+      storageLevel: StorageLevel = StorageLevel.MEMORY_AND_DISK_SER_2
+    ): ReceiverInputDStream[Status] = {
+    new ExtendedTwitterInputDStream(ssc, twitterAuth, filters, userFilters, storageLevel)
+  }
+}
+</code></pre>
+<div class="output execute_result plain_result" execution_count="1">
+<pre><code>import twitter4j.Status
+import twitter4j.auth.Authorization
+import org.apache.spark.storage.StorageLevel
+import org.apache.spark.streaming.StreamingContext
+import org.apache.spark.streaming.dstream.{ReceiverInputDStream, DStream}
+defined module ExtendedTwitterUtils
+</code></pre>
+</div>
+</div>
+<div class="cell code" execution_count="1" scrolled="false">
+<pre><code class="language-scala">println(&quot;done running the extendedTwitterUtils2run notebook - ready to stream from twitter&quot;)
+</code></pre>
+</div>
 
                     </main>
 
